tests/NormalTests/paczka1/fuzzy1/75906176.err
Error in line 1: SF1Rz S101 22,1
Error in line 7: SGIztjqwg A831 23,9
Error in line 8: SGIztjqwg S719 72,8
Error in line 12: LgeqBO8 S101 69,2
Error in line 19: Pkqc19n A831 79,28
Error in line 16: SF1Rz A136 71,4
Error in line 14: S101 A136 39,9
Error in line 18: LgeqBO8 S719 70,4
Error in line 25: Pkqc19n A831 209,1
